feat: add TextMate syntax highlighting